test-package-compiler/tests/snapshots/compiler_tests__comment_handling_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (2):
  - Undefined variable: object
  - Undefined variable: value
